--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
         <version>2.3.3.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.demo.camel</groupId>
-    <artifactId>demo</artifactId>
+    <groupId>com.kevvlvl.demo</groupId>
+    <artifactId>camel</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>demo-camel</name>
     <description>Demo apache camel</description>
