--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
+server.port=8090
+
+# H2 Database configuration
 spring.datasource.url= jdbc:h2:file:/home/kev/IdeaProjects/demo-camel/data/appdb
 spring.datasource.driverClassName= org.h2.Driver
 spring.datasource.username=app
 spring.datasource.password=pass123
+spring.h2.console.enabled=true
+# JPA configuration
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.h2.console.enabled=true
