added actuator, and new RollingFileAppender

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,12 @@ spring.datasource.driverClassName= org.h2.Driver
 spring.datasource.username=app
 spring.datasource.password=pass123
 spring.h2.console.enabled=true
+
 # JPA configuration
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+# Actuator - expose loggers and health endpoint
+management.endpoints.web.exposure.include=loggers,health
+# Actuator - Enable loggers endpoint
+management.endpoint.loggers.enabled=true
