Added concept of ClientTask (pk-fk)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8090
 
 # H2 Database configuration
-spring.datasource.url= jdbc:h2:file:/home/kev/IdeaProjects/demo-camel/data/appdb
+spring.datasource.url=jdbc:h2:mem:appDb
 spring.datasource.driverClassName= org.h2.Driver
 spring.datasource.username=app
 spring.datasource.password=pass123
@@ -9,7 +9,10 @@ spring.h2.console.enabled=true
 
 # JPA configuration
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.javax.persistence.schema-generation.database.action=drop-and-create
+spring.jpa.properties.javax.persistence.schema-generation.drop-source=script-then-metadata
+spring.jpa.properties.javax.persistence.schema-generation.drop-script-source=schema.sql
 
 # Actuator - expose loggers and health endpoint
 management.endpoints.web.exposure.include=loggers,health
